Responsive fixes and sub menu hide issue fixes

--- a/src/app/component/menu-filter/menu-filter.component.html
+++ b/src/app/component/menu-filter/menu-filter.component.html
@@ -9,10 +9,10 @@
         </div>
       </div>
 
-      <div class="content-container w-25 mr-auto heroes" [@filterAnimation]="totalMockSiteData" (clickOutside)="onClickedOutside($event)">
+      <div class="content-container mr-auto heroes" [@filterAnimation]="totalMockSiteData" (clickOutside)="onClickedOutside($event)">
         <p-scrollPanel [style]="{width: '100%', height: '500px'}"  >
            
-            <div *ngFor="let data of mockSiteData" class="content_container d-flex w-100 mb-3 p-3 hero" (click)="showModal($event); " >
+            <div *ngFor="let data of mockSiteData" class="content_container d-flex w-100 mb-3 p-3 hero" (click)="showModal($event);  clickData(data.id, data.status)" >
                 <div class="mr-2">
                     {{data.id}}
                 </div>
@@ -22,14 +22,14 @@
             </div>
         </p-scrollPanel>
       </div>
-    
-      
-        <div #customModel class="content-model-container" style="width:150px;">
-          <p-scrollPanel [style]="{width: '100%', height: '100px'}">
-            <div class="d-flex p-3 w-100" *ngFor="let submenu of subMenuData">
-              <div>{{submenu.value}}</div>
-            </div>
-          </p-scrollPanel>
-           
-        </div>
+
+      <div #customModel [ngClass]="(displayCustomModal) ? 'modelChangeDet': ''" class="content-model-container" style="width:150px;">
+        <p-scrollPanel [style]="{width: '100%', height: '100px'}">
+          <div class="d-flex p-3 w-100" *ngFor="let submenu of subMenuData">
+            <div>{{submenu.value}}</div>
+          </div>
+        </p-scrollPanel>
+         
+      </div>
+     
 </div>
