--- a/src/app/component/menu-filter/menu-filter.component.scss
+++ b/src/app/component/menu-filter/menu-filter.component.scss
@@ -1,4 +1,5 @@
 .content-container{
+    width:265px;
     .content_container{
         background: grey;
         font-size: 14px;
@@ -34,4 +35,8 @@
 :host ::ng-deep .primeSubMenu.ui-menu.ui-widget.ui-widget-content.ui-corner-all.ui-menu-dynamic.ui-shadow {
     margin-left: 20%;
     margin-top: -5%;
+}
+
+.modelChangeDet{
+    opacity: 1 !important ;
 }
