--- a/src/app/component/menu-filter/menu-filter.component.html
+++ b/src/app/component/menu-filter/menu-filter.component.html
@@ -3,6 +3,8 @@
         <form>
                 <input #criteria type="text" class="form-control" (input)="updateCriteria(criteria.value)">
         </form>
+
+        <h1>Hello world 1</h1>
       
         <div class="input-group-append">
           <span class="input-group-text">Search</span>
@@ -31,5 +33,7 @@
         </p-scrollPanel>
          
       </div>
+
+     
      
 </div>
