--- a/src/app/component/menu-filter/menu-filter.component.html
+++ b/src/app/component/menu-filter/menu-filter.component.html
@@ -4,7 +4,7 @@
                 <input #criteria type="text" class="form-control" (input)="updateCriteria(criteria.value)">
         </form>
 
-        <h1>Hello world 1</h1>
+        <h1>Hello world </h1>
       
         <div class="input-group-append">
           <span class="input-group-text">Search</span>
